--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,9 @@ output/logs/*
 *.jsonl
 
 echo -e "\n# Output y logs\n/output/\n!output/.gitkeep\noutput/logs/*\n!output/logs/.gitkeep\n*.log\n*.jsonl" >> .gitignore
+
+# scripts
+.hashes.json
+
+
+
