--- a/.gitignore
+++ b/.gitignore
@@ -44,5 +44,5 @@ echo -e "\n# Output y logs\n/output/\n!output/.gitkeep\noutput/logs/*\n!output/l
 # scripts
 .hashes.json
 
-
-
+# Estructura
+estructura.txt
