--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,3 @@
-# .github/workflows/test.yml
 name: 🧪 Run Project Tests
 
 on:
@@ -24,6 +23,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
+    - name: 🔧 Install system dependencies (Poppler + Tesseract)
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y poppler-utils tesseract-ocr
 
     - name: 🧪 Run tests with pytest
       run: |
