--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,25 @@
-pymupdf==1.25.5
-pdfplumber
-pytest
-unidecode
-loguru>=0.7.2
-ftfy>=6.1.1
+# 🧬 Requisitos del Proyecto OpenPages Pipeline – Revisión V2 completa
+
+# 👝︝ OCR (Vuelta 2)
+pytesseract>=0.3.10
+pdf2image>=1.16.3
+Pillow>=10.0.0
+
+# 🔬 Parser (V1)
+pdfplumber>=0.10.3     # Extracción estructurada de PDFs nativos
+PyMuPDF>=1.22.3        # Alternativa moderna a pdfplumber
+
+# 🔧 Reparación Semántica (V1)
+ftfy>=6.1.1            # Fixes mojibake and Unicode problems
+unidecode>=1.3.6       # Translitera caracteres Unicode → ASCII base
+
+# 📝 Logging inteligente (V1)
+loguru>=0.7.2          # Logger semántico y estructurado
+
+# 🧪 Testing (V5+, opcional en V2)
+pytest>=8.1.1
+reportlab>=4.0.8       # Generación de PDFs sintéticos
+
+# ❳ UX opcional
+tqdm>=4.66.1           # Progreso visual OCR
+
